--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     new Date().getTime(), event: 'gtm.js'
             }); var f = d.getElementsByTagName(s)[0],
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-WMRDM6B9');</script>
     <!-- End Google Tag Manager -->
 
@@ -236,7 +236,7 @@
         </div>
 
         <footer>
-            <p>Placeholder configuration: GTM-WMRDM6B9 | GAM: /123456/teste_ad</p>
+            <p>Placeholder configuration: GTM-WMRDM6B9| GAM: /123456/teste_ad</p>
         </footer>
     </div>
 
